--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "dependencies": {
     "@types/big.js": "^4.0.1",
+    "@types/moment": "^2.13.0",
     "@types/superagent": "^3.5.6",
     "big.js": "^5.0.3",
+    "moment": "^2.20.1",
     "superagent": "^3.8.2"
   },
   "devDependencies": {
