--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/superagent": "^3.5.7",
     "big.js": "^5.0.3",
     "date-fns": "^2.0.0-alpha.7",
+    "maquette": "^3.2.2",
     "superagent": "^3.8.2"
   },
   "devDependencies": {
